# ModAI_cpp

./: .clang-format  .gitignore  BACKEND_ANALYSIS.md  BUILD.md  CMakeLists.txt  COMPARISON.md  COMPLETE_API_REFERENCE.md  FEATURE_COMPLETE.md  LOVABLE_PROMPT.md  MIGRATION_COMPLETE.md  MIGRATION_NOTES.md  MIGRATION_NOTES_CORE.md  PROJECT_SUMMARY.md  README.md  README_CORE.md  REWRITE_ANALYSIS.md  SETUP.md  api_contract.md  debug_tokenizer  debug_tokenizer.cpp  spec.txt  test_hive_api.py
backend/: API_DOCUMENTATION.md  CMakeLists.txt  README.md  main.cpp
backend/config/: rules.json
backend/include/api/: ApiServer.h
backend/include/core/: ContentItem.h  ModerationEngine.h  ResultCache.h  RuleEngine.h
backend/include/detectors/: HiveImageModerator.h  HiveTextModerator.h  ImageModerator.h  LocalAIDetector.h  TextDetector.h  TextModerator.h
backend/include/export/: Exporter.h
backend/include/network/: CurlHttpClient.h  HttpClient.h  RateLimiter.h
backend/include/scraper/: RedditScraper.h
backend/include/storage/: JsonlStorage.h  Storage.h
backend/include/utils/: Crypto.h  Logger.h
backend/src/: main.cpp
backend/src/api/: ApiServer.cpp
backend/src/core/: ContentItem.cpp  ModerationEngine.cpp  RuleEngine.cpp
backend/src/detectors/: HiveImageModerator.cpp  HiveTextModerator.cpp
backend/src/export/: Exporter.cpp
backend/src/network/: CurlHttpClient.cpp  RateLimiter.cpp
backend/src/scraper/: RedditScraper.cpp
backend/src/storage/: JsonlStorage.cpp
backend/src/utils/: Crypto.cpp  Logger.cpp
build_core/: Makefile
docs/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_AI_README.md  LOCAL_AI_SETUP.md  MULTI_MODE_FEATURES.md  ONNX_IMPLEMENTATION.md  QUICK_START.md
frontend/: index.html  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Dashboard.jsx  DetailView.jsx
include/core/: AppController.h  ContentItem.h  CoreController.h  ModerationEngine.h  RuleEngine.h
include/core/interfaces/: HttpServerInterface.h  Scheduler.h
include/core/services/: StdScheduler.h
include/detectors/: HFTextDetector.h  HiveImageModerator.h  HiveTextModerator.h  ImageModerator.h  TextDetector.h  TextModerator.h
include/export/: Exporter.h
include/network/: CppHttpServer.h  CurlHttpClient.h  HttpClient.h  HttpServer.h  QtHttpClient.h  RateLimiter.h
include/scraper/: RedditScraper.h
include/storage/: JsonlStorage.h  Storage.h
include/ui/: AIImageDetectorPanel.h  AITextDetectorPanel.h  ChatbotPanel.h  DashboardItemDelegate.h  DashboardModel.h  DashboardProxyModel.h  DetailPanel.h  MainWindow.h  RailguardOverlay.h  ReviewDialog.h
include/utils/: Crypto.h  Logger.h
scripts/: README.md  build.ps1  build.sh  compare_inference.py  export_model_to_onnx.py  install_dependencies.ps1  install_dependencies.sh  install_onnxruntime.sh  run.ps1  run.sh
src/: main.cpp  server_main.cpp
src/core/: AppController.cpp  ContentItem.cpp  CoreController.cpp  ModerationEngine.cpp  ResultCache.cpp  RuleEngine.cpp
src/detectors/: HFTextDetector.cpp  HiveImageModerator.cpp  HiveTextModerator.cpp  LocalAIDetector.cpp
src/export/: Exporter.cpp
src/network/: CurlHttpClient.cpp  HttpServer.cpp  QtHttpClient.cpp  RateLimiter.cpp
src/scraper/: RedditScraper.cpp
src/storage/: JsonlStorage.cpp
src/ui/: AIImageDetectorPanel.cpp  AITextDetectorPanel.cpp  ChatbotPanel.cpp  DashboardItemDelegate.cpp  DashboardModel.cpp  DashboardProxyModel.cpp  DetailPanel.cpp  MainWindow.cpp  RailguardOverlay.cpp  ReviewDialog.cpp
src/utils/: Crypto.cpp  Logger.cpp
tests/: test_onnx_inference.cpp
